syntax = "proto3";

package control_grpc;
option go_package = "control_grpc/proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string errorMessage = 2;
}